[gd_scene load_steps=83 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://cenario/fundo.png" type="Texture" id=2]
[ext_resource path="res://Modak-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://squish/vida.png" type="Texture" id=4]
[ext_resource path="res://telas/derrota.png" type="Texture" id=5]
[ext_resource path="res://telas/vitoria.png" type="Texture" id=6]
[ext_resource path="res://telas/inicio/0.png" type="Texture" id=7]
[ext_resource path="res://telas/inicio/1.png" type="Texture" id=8]
[ext_resource path="res://telas/inicio/2.png" type="Texture" id=9]
[ext_resource path="res://telas/inicio/3.png" type="Texture" id=10]
[ext_resource path="res://telas/comoJogar.png" type="Texture" id=11]
[ext_resource path="res://squish/andar/1.png" type="Texture" id=12]
[ext_resource path="res://squish/andar/2.png" type="Texture" id=13]
[ext_resource path="res://squish/andar/3.png" type="Texture" id=14]
[ext_resource path="res://squish/andar/4.png" type="Texture" id=15]
[ext_resource path="res://squish/andar/5.png" type="Texture" id=16]
[ext_resource path="res://squish/andar/6.png" type="Texture" id=17]
[ext_resource path="res://squish/andar/7.png" type="Texture" id=18]
[ext_resource path="res://squish/andar/8.png" type="Texture" id=19]
[ext_resource path="res://squish/andar/9.png" type="Texture" id=20]
[ext_resource path="res://GameOver.wav" type="AudioStream" id=21]
[ext_resource path="res://squish/atacar/0.png" type="Texture" id=22]
[ext_resource path="res://squish/atacar/1.png" type="Texture" id=23]
[ext_resource path="res://squish/atacar/2.png" type="Texture" id=24]
[ext_resource path="res://squish/atacar/3.png" type="Texture" id=25]
[ext_resource path="res://squish/atacar/4.png" type="Texture" id=26]
[ext_resource path="res://telas/como jogar/matarInimigo/0.png" type="Texture" id=27]
[ext_resource path="res://telas/como jogar/matarInimigo/1.png" type="Texture" id=28]
[ext_resource path="res://telas/como jogar/matarInimigo/2.png" type="Texture" id=29]
[ext_resource path="res://telas/como jogar/matarInimigo/3.png" type="Texture" id=30]
[ext_resource path="res://telas/como jogar/matarInimigo/4.png" type="Texture" id=31]
[ext_resource path="res://telas/como jogar/matarInimigo/5.png" type="Texture" id=32]
[ext_resource path="res://telas/como jogar/matarInimigo/6.png" type="Texture" id=33]
[ext_resource path="res://telas/como jogar/salvarBebe/0.png" type="Texture" id=34]
[ext_resource path="res://telas/como jogar/salvarBebe/1.png" type="Texture" id=35]
[ext_resource path="res://telas/como jogar/salvarBebe/2.png" type="Texture" id=36]
[ext_resource path="res://telas/como jogar/salvarBebe/3.png" type="Texture" id=37]
[ext_resource path="res://telas/como jogar/salvarBebe/4.png" type="Texture" id=38]
[ext_resource path="res://telas/como jogar/salvarBebe/5.png" type="Texture" id=39]
[ext_resource path="res://telas/como jogar/salvarBebe/6.png" type="Texture" id=40]
[ext_resource path="res://telas/como jogar/escalar/0.png" type="Texture" id=41]
[ext_resource path="res://telas/como jogar/escalar/1.png" type="Texture" id=42]
[ext_resource path="res://telas/como jogar/escalar/2.png" type="Texture" id=43]
[ext_resource path="res://telas/como jogar/escalar/3.png" type="Texture" id=44]
[ext_resource path="res://telas/como jogar/escalar/4.png" type="Texture" id=45]
[ext_resource path="res://telas/como jogar/escalar/5.png" type="Texture" id=46]
[ext_resource path="res://telas/como jogar/escalar/6.png" type="Texture" id=47]
[ext_resource path="res://telas/como jogar/escalar/7.png" type="Texture" id=48]
[ext_resource path="res://telas/como jogar/esquivar/0.png" type="Texture" id=49]
[ext_resource path="res://telas/como jogar/esquivar/1.png" type="Texture" id=50]
[ext_resource path="res://telas/como jogar/esquivar/2.png" type="Texture" id=51]
[ext_resource path="res://telas/como jogar/esquivar/3.png" type="Texture" id=52]
[ext_resource path="res://telas/como jogar/esquivar/4.png" type="Texture" id=53]
[ext_resource path="res://telas/como jogar/esquivar/5.png" type="Texture" id=54]
[ext_resource path="res://telas/como jogar/esquivar/6.png" type="Texture" id=55]
[ext_resource path="res://telas/como jogar/esquivar/7.png" type="Texture" id=56]
[ext_resource path="res://telas/como jogar/esquivar/8.png" type="Texture" id=57]
[ext_resource path="res://telas/como jogar/esquivar/9.png" type="Texture" id=58]
[ext_resource path="res://telas/como jogar/esquivar/10.png" type="Texture" id=59]
[ext_resource path="res://squish/subir/1.png" type="Texture" id=60]
[ext_resource path="res://squish/subir/2.png" type="Texture" id=61]
[ext_resource path="res://squish/subir/3.png" type="Texture" id=62]
[ext_resource path="res://squish/subir/4.png" type="Texture" id=63]
[ext_resource path="res://Victory SoundFX2.wav" type="AudioStream" id=64]
[ext_resource path="res://telas/credito.png" type="Texture" id=65]
[ext_resource path="res://Memoraphile - Gone Fishin.ogg" type="AudioStream" id=66]
[ext_resource path="res://Memoraphile - Beary Fishy Menu Screen.ogg" type="AudioStream" id=67]
[ext_resource path="res://Pauze Game Arcade.wav" type="AudioStream" id=68]
[ext_resource path="res://Interface Soft Button.wav" type="AudioStream" id=69]
[ext_resource path="res://telas/pause.png" type="Texture" id=70]

[sub_resource type="DynamicFont" id=1]
size = 66
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 70 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 48 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ) ],
"loop": true,
"name": "default",
"speed": 11.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 65 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HUD" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="fundo" type="Sprite" parent="CanvasLayer/ParallaxBackground"]
position = Vector2( 677.81, 392.37 )
scale = Vector2( 1.15268, 1.24879 )
texture = ExtResource( 2 )

[node name="pontuacao" type="Label" parent="CanvasLayer"]
margin_left = 1176.59
margin_top = 8.47857
margin_right = 1328.59
margin_bottom = 108.479
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vidas" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 35.1282
margin_top = 741.892
margin_right = 75.1282
margin_bottom = 772.892
text = "3
"

[node name="v1" type="Sprite" parent="CanvasLayer"]
position = Vector2( 85.7452, 708.341 )
texture = ExtResource( 4 )

[node name="v2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 204.742, 708.341 )
texture = ExtResource( 4 )

[node name="v3" type="Sprite" parent="CanvasLayer"]
position = Vector2( -266.312, 683.543 )
texture = ExtResource( 4 )
offset = Vector2( 593.05, 24.7975 )

[node name="Derrota" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 674.917, 384.513 )
scale = Vector2( 1.13052, 1.214 )
texture = ExtResource( 5 )

[node name="recomecar" type="Button" parent="CanvasLayer/Derrota"]
margin_left = -245.0
margin_top = -129.0
margin_right = 255.0
margin_bottom = -25.0
flat = true

[node name="Vitoria" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 674.017, 384.513 )
scale = Vector2( 1.12902, 1.214 )
texture = ExtResource( 6 )

[node name="recomecar" type="Button" parent="CanvasLayer/Vitoria"]
margin_left = -245.0
margin_top = -129.0
margin_right = 255.0
margin_bottom = -25.0
flat = true

[node name="Inicio" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 682.858, 384.513 )
scale = Vector2( 1.14378, 1.214 )
frames = SubResource( 2 )
frame = 2

[node name="Jogar" type="Button" parent="CanvasLayer/Inicio"]
margin_left = -219.0
margin_top = -89.0164
margin_right = 225.0
margin_bottom = -14.0164
rect_pivot_offset = Vector2( 577.924, 310.266 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Como Jogar" type="Button" parent="CanvasLayer/Inicio"]
margin_left = -219.0
margin_top = 3.24063
margin_right = 225.0
margin_bottom = 78.2406
rect_pivot_offset = Vector2( 452.584, 138.841 )
flat = true

[node name="Creditos" type="Button" parent="CanvasLayer/Inicio"]
margin_left = -219.0
margin_top = 93.0264
margin_right = 225.0
margin_bottom = 168.026
rect_pivot_offset = Vector2( 452.584, 138.841 )
flat = true

[node name="Sair" type="Button" parent="CanvasLayer/Inicio"]
margin_left = -219.0
margin_top = 181.989
margin_right = 225.0
margin_bottom = 256.988
rect_pivot_offset = Vector2( 452.584, 138.841 )
flat = true

[node name="Pause" type="AnimatedSprite" parent="CanvasLayer"]
visible = false
position = Vector2( 682.858, 384.513 )
scale = Vector2( 1.14378, 1.214 )
frames = SubResource( 3 )

[node name="Jogar" type="Button" parent="CanvasLayer/Pause"]
margin_left = -219.0
margin_top = -90.6639
margin_right = 225.0
margin_bottom = -15.6639
rect_pivot_offset = Vector2( 577.924, 310.266 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Como Jogar" type="Button" parent="CanvasLayer/Pause"]
margin_left = -219.0
margin_top = 3.24063
margin_right = 225.0
margin_bottom = 78.2406
rect_pivot_offset = Vector2( 452.584, 138.841 )
flat = true

[node name="Creditos" type="Button" parent="CanvasLayer/Pause"]
margin_left = -219.0
margin_top = 99.6162
margin_right = 225.0
margin_bottom = 174.616
rect_pivot_offset = Vector2( 452.584, 138.841 )
flat = true

[node name="Sair" type="Button" parent="CanvasLayer/Pause"]
margin_left = -219.0
margin_top = 181.989
margin_right = 225.0
margin_bottom = 256.988
rect_pivot_offset = Vector2( 452.584, 138.841 )
flat = true

[node name="comoJogar" type="AnimatedSprite" parent="CanvasLayer"]
visible = false
position = Vector2( 679.858, 384.513 )
scale = Vector2( 1.14378, 1.214 )
frames = SubResource( 4 )

[node name="Voltar" type="Button" parent="CanvasLayer/comoJogar"]
margin_left = -594.0
margin_top = -300.0
margin_right = -445.0
margin_bottom = -239.0
rect_pivot_offset = Vector2( 452.584, 138.841 )
flat = true

[node name="andar_esquerda" type="AnimatedSprite" parent="CanvasLayer/comoJogar"]
position = Vector2( -404.577, 76.9008 )
scale = Vector2( 0.289705, 0.289705 )
frames = SubResource( 5 )
frame = 4
flip_h = true

[node name="andar_direita" type="AnimatedSprite" parent="CanvasLayer/comoJogar"]
position = Vector2( -146.587, 76.901 )
scale = Vector2( 0.289705, 0.289705 )
frames = SubResource( 5 )
frame = 3

[node name="Sprite" type="Sprite" parent="CanvasLayer/comoJogar/andar_direita"]
position = Vector2( -456.656, -170.761 )
scale = Vector2( 20.6427, 1 )

[node name="atacar" type="AnimatedSprite" parent="CanvasLayer/comoJogar"]
position = Vector2( -169.904, 269.964 )
scale = Vector2( 0.299096, 0.299096 )
frames = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/comoJogar/atacar"]
position = Vector2( 1.01398, -169.478 )
scale = Vector2( 8.96534, 0.968603 )

[node name="Derrotar_lagarto" type="AnimatedSprite" parent="CanvasLayer/comoJogar"]
position = Vector2( 419.822, 215.361 )
scale = Vector2( 0.393186, 0.393186 )
frames = SubResource( 7 )
frame = 3

[node name="Salve_Bebe" type="AnimatedSprite" parent="CanvasLayer/comoJogar"]
position = Vector2( 109.625, 195.304 )
scale = Vector2( 0.393186, 0.393186 )
frames = SubResource( 8 )
frame = 1

[node name="Escale" type="AnimatedSprite" parent="CanvasLayer/comoJogar"]
position = Vector2( 115.452, 1.75952 )
scale = Vector2( 0.316939, 0.316939 )
frames = SubResource( 9 )
frame = 2

[node name="EvitePedras" type="AnimatedSprite" parent="CanvasLayer/comoJogar"]
position = Vector2( 423.935, 1.75952 )
scale = Vector2( 0.316939, 0.316939 )
frames = SubResource( 10 )
frame = 10

[node name="subir" type="AnimatedSprite" parent="CanvasLayer/comoJogar"]
position = Vector2( -391, 263.5 )
scale = Vector2( 0.291856, 0.291856 )
frames = SubResource( 11 )
frame = 2
flip_h = true

[node name="Sprite" type="Sprite" parent="CanvasLayer/comoJogar/subir"]
position = Vector2( 153.616, 215.432 )
scale = Vector2( 1.82488, 5.97268 )
offset = Vector2( -85.6074, -35.0607 )

[node name="creditos" type="AnimatedSprite" parent="CanvasLayer"]
visible = false
position = Vector2( 684.404, 384.513 )
scale = Vector2( 1.14641, 1.214 )
frames = SubResource( 12 )

[node name="Voltar" type="Button" parent="CanvasLayer/creditos"]
margin_left = -594.0
margin_top = -300.0
margin_right = -445.0
margin_bottom = -239.0
rect_pivot_offset = Vector2( 452.584, 138.841 )
flat = true

[node name="SomJogando" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 66 )
volume_db = -15.0

[node name="SomInicio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 67 )
volume_db = -10.0
autoplay = true

[node name="clique" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 69 )
volume_db = -10.0

[node name="somPause" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 68 )
volume_db = -10.0

[node name="vitoria" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 64 )
volume_db = -10.0

[node name="derrota" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -10.0
[connection signal="pressed" from="CanvasLayer/Derrota/recomecar" to="." method="_on_recomecar_pressed"]
[connection signal="pressed" from="CanvasLayer/Vitoria/recomecar" to="." method="_on_recomecar_pressed"]
[connection signal="pressed" from="CanvasLayer/Inicio/Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="CanvasLayer/Inicio/Como Jogar" to="." method="_on_Como_Jogar_pressed"]
[connection signal="pressed" from="CanvasLayer/Inicio/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="CanvasLayer/Inicio/Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/Como Jogar" to="." method="_on_Como_Jogar_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="CanvasLayer/comoJogar/Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="CanvasLayer/creditos/Voltar" to="." method="_on_Voltar_pressed"]
